# our-planner

./: 2025-03-21-1220.json  2025-03-21_1222.json  404.html  CHANGELOG.md  Critical Chain Buffer Management.md  LICENSE.txt  README.md  build.py  data_export.html  export_operations.py  fever-chart-considerations.md  file_operations.py  grid_with_resources.py  hello.json  help_menu.py  index.html  main.py  menu-dialog-window-example.py  mkdocs.yml  model.py  network_menu.py  planning.md  pyproject.toml  pytest.ini  release.py  requirements.txt  run.py  run_tests.py  saved_plan.json  tag_operations.py  task_manager.py  task_operations.py  ui_components.py
.github/: workflow.yml
.github/workflows/: main.yml
CHANGELOG/: index.html
Critical Chain Buffer Management/: index.html
contributing/: index.html
docs/: CHANGELOG.md  contributing.md  file-structure.md  getting-started.md  improvements.md  index.md  licence.md  troubleshooting.md  user-guide.md
examples/: saved_plan.json  task_resource_export_20250327_223036_resource_loading.csv  task_resource_export_20250327_223036_resources.csv  task_resource_export_20250327_223036_tasks.csv
getting-started/: index.html
improvements/: index.html
licence/: index.html
scripts/: stage12_scenario.json  stage12_walkthrough.py
search/: search_index.json
src/: __init__.py  main.py
src/controller/: __init__.py  task_manager.py
src/model/: __init__.py  dependency_notation.py  task_resource_model.py
src/operations/: __init.py  ccpm_operations.py  export_operations.py  file_operations.py  network_operations.py  report_operations.py  tag_operations.py  task_operations.py
src/utils/: __init__.py  colors.py  version.py
src/view/: __init__.py  ui_components.py
src/view/dialogs/: __init__.py
src/view/menus/: __init__.py  help_menu.py  network_menu.py
tests/: README.md  conftest.py  test_ccpm_operations.py  test_critical_path.py  test_delete_history.py  test_duration_estimates.py  test_export_csv.py  test_fever_chart_display_point.py  test_fever_chart_merge_signal.py  test_fever_charts_narrative.py  test_file_operations.py  test_help_menu.py  test_model.py  test_network_graph_report.py  test_project_start_date.py  test_report_filter_dimensions.py  test_report_operations.py  test_resource_capacity.py  test_resource_grid_controls.py  test_resource_load_color.py  test_scenarios.py  test_tag_operations.py  test_task_notes.py  test_task_tooltips.py
troubleshooting/: index.html
user-guide/: index.html
